# registration

./: .gitignore  CMakeLists.txt  README.md  registration.cpp  reglib.py  test.py
files/: model_points.csv  model_points.pcd  model_points.ply  scene_points.csv  scene_points.pcd  scene_points.ply
